tests/ui/ferrocene/compiler-arguments/upper_c_overflow-checks/upper_c_overflow-checks_space-eq-invalid.rs
//@ check-fail
//@ compile-flags: -C overflow-checks=invalid
//~? ERROR incorrect value

fn main() {}

// ferrocene-annotations: um_rustc_C_overflow_checks
